<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>testerPage</class>
 <widget class="QWidget" name="testerPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>720</width>
    <height>480</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>70</x>
     <y>120</y>
     <width>581</width>
     <height>321</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_5">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="label">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>20</pointsize>
           </font>
          </property>
          <property name="text">
           <string>用户名：</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="username">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>16</pointsize>
           </font>
          </property>
          <property name="text">
           <string>1</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>20</pointsize>
           </font>
          </property>
          <property name="text">
           <string>经验值：</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="expNum">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>16</pointsize>
           </font>
          </property>
          <property name="text">
           <string>2</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="label_4">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>20</pointsize>
           </font>
          </property>
          <property name="text">
           <string>等级：</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="rankNum">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>16</pointsize>
           </font>
          </property>
          <property name="text">
           <string>3</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QLabel" name="label_5">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>20</pointsize>
           </font>
          </property>
          <property name="text">
           <string>出题数：</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="passLevel">
          <property name="font">
           <font>
            <family>华文行楷</family>
            <pointsize>16</pointsize>
           </font>
          </property>
          <property name="text">
           <string>4</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QPushButton" name="searchButton">
        <property name="font">
         <font>
          <family>华文行楷</family>
          <pointsize>20</pointsize>
         </font>
        </property>
        <property name="text">
         <string>查询</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="battleButton">
        <property name="font">
         <font>
          <family>华文行楷</family>
          <pointsize>20</pointsize>
         </font>
        </property>
        <property name="text">
         <string>出题</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="exitButton">
        <property name="font">
         <font>
          <family>华文行楷</family>
          <pointsize>20</pointsize>
         </font>
        </property>
        <property name="text">
         <string>退出</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>300</x>
     <y>30</y>
     <width>101</width>
     <height>72</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>华文行楷</family>
     <pointsize>20</pointsize>
    </font>
   </property>
   <property name="text">
    <string>出题者</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
